# afwallet-client

./: .gitignore  Cargo.toml  LICENCE.md  LICENSE  README.md  Rocket.toml  afwalletclient.h  build.rs  build.sh  pack.sh  run.sh
android/: Cargo.toml
desktop/: Cargo.toml
ios/: Cargo.toml
src/: helper.rs  keygencli.rs  lib.rs  main.rs  signcli.rs
src/ecdsa/: keygen.rs  mod.rs  network.rs  sign.rs
src/sdk/: keygen.rs  mod.rs  network.rs  sign.rs
src/util/: address.rs  local_ip.rs  mod.rs
src/wallet/: wallet.rs
src/web/: Settings.toml  mod.rs  server.rs
src/web/auth/: cognito.rs  jwt.rs  mod.rs  passthrough.rs
src/web/routes/: keygen.rs  keygen.rs.bak  mod.rs  ping.rs  sign.rs  token.rs  vault.rs  wallet.rs
src/web/storage/: db.rs  mod.rs
static/: index.html  token.html
static/js/: base32.js  blake2s.js  crc16.js  index.js  krtoken.js  restclient.js  scrypt.js  simple-password-meter.js  supercop.js
static/libs/srp/: thinbus-srp6a-2048-sha256-min.js  thinbus-srp6a-min.js
